# poetry-tutorial

./: logging.conf  my-flask-app.py  my_flask_app.py  pyproject.toml  startup.py
poetry_demo/: app.py  my-flask-app.py  schemas.py  views_blueprint.py
poetry_demo/api/: restful.py
poetry_demo/api/image/: business.py  serializers.py
poetry_demo/api/image/endpoints/: persons.py
