[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask-restful = "^0.3.8"
flask-mongoengine = "^0.9.5"
kafka = "^1.3.5"
httplib2 = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
my-script = "startup:main"
app = "my-flask-app:main"
